✔Add illegal access flag to JVM to placate VM re JOGL.